src/test/ui/issues/issue-10656.rs
#![deny(missing_docs)]
#![crate_type="lib"]
//~^^ ERROR missing documentation for the crate
